@@ -1,3 +1,7 @@
+2010-05-27  Xavier Perseguers  <typo3@perseguers.ch>
+
+	* Fixed bug #14457: 1-2-3 Install Process breaks with PostgreSQL
+
 2010-05-21  Xavier Perseguers  <typo3@perseguers.ch>
 
 	* Fixed bug #14372: Mapping does not work with table alias
